feat: implement automated salary calc based on 2007 grid and auto-assign fingerprint IDs

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -238,6 +238,18 @@
             "thu": "الخميس",
             "fri": "الجمعة",
             "sat": "السبت"
+        },
+        "salaryCalculator": {
+            "title": "حاسبة الرواتب (شبكة 2007)",
+            "category": "الفئة",
+            "echelon": "الدرجة",
+            "calculate": "احسب",
+            "indices": "الأرقام الاستدلالية",
+            "minIndex": "الرقم الاستدلالي الأدنى",
+            "echelonIndex": "الرقم الاستدلالي للدرجة",
+            "totalIndex": "الرقم الاستدلالي الإجمالي",
+            "result": "الراتب الأساسي الناتج",
+            "apply": "تطبيق على النموذج"
         }
     }
 }
