feat: updated salary calculation to support Full-time (x45) and Part-time (x42) multipliers

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -232,6 +232,9 @@
         "fail": "فشل إضافة الموظف",
         "educationLevel": "المستوى التعليمي",
         "experienceYears": "سنوات الخبرة",
+        "jobType": "نوع الوظيفة",
+        "fullTime": "دوام كامل",
+        "partTime": "دوام جزئي",
         "days": {
             "sun": "الأحد",
             "mon": "الاثنين",
