refactor: move work hours to dedicated page and update dashboard/sidebar

--- a/src/locales/ar.json
+++ b/src/locales/ar.json
@@ -11,7 +11,7 @@
         "profile": "الملف الشخصي",
         "logout": "تسجيل الخروج",
         "myAccount": "حسابي",
-        "sensor": "حالة الحساس"
+        "workHours": "ساعات العمل"
     },
     "login": {
         "title": "مرحبًا بك في AtProfit HR",
